polybot-k8s/dev/Polybot/ingress.yaml
apiVersion: networking.k8s.io/v1
kind: Ingress
metadata:
  name: polybot-dev
  namespace: polybot-dev
  annotations:
    cert-manager.io/cluster-issuer: letsencrypt-prod
    nginx.ingress.kubernetes.io/ssl-redirect: "true"
spec:
  ingressClassName: nginx
  tls:
    - hosts:
        - merry-bot-dev.fursa.click
      secretName: merry-bot-dev-tls
  rules:
    - host: merry-bot-dev.fursa.click
      http:
        paths:
          - path: /
            pathType: Prefix
            backend:
              service:
                name: service-polybot
                port:
                  number: 8000
